# Alx_CapstoneProject

./: .env  manage.py  requirements.txt
StockHub/: README.md  procfile  pyproject.toml  requirements.txt
StockHub/StockHub/: asgi.py  settings.py  urls.py  views.py  wsgi.py
StockHub/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
StockHub/accounts/migrations/: 0001_initial.py  0002_stock.py
StockHub/accounts/templates/accounts/: home.html
StockHub/inventory/: create.md  delete.md  models.py  retrieve.md  serializers.py  update.md  urls.py  views.py
StockHub/inventory/migrations/: 0001_initial.py  0002_rename_book_stock.py
StockHub/purchase/: models.py  serializers.py  urls.py  views.py
StockHub/purchase/migrations/: 0001_initial.py
StockHub/sales/: models.py  serializers.py  urls.py  views.py
StockHub/sales/migrations/: 0001_initial.py
